--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "sass": "^1.55.0"
-  },
-  "dependencies": {
-    "gulp": "^4.0.2"
   }
 }
